# atlantide

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  atlantide.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
atlantide/: __init__.py
atlantide/cli/: __init__.py  component.py  console.py  diagram.py  errors.py  introspect.py  json_out.py  main.py  options.py  progress.py  project.py  render.py  state.py  target.py
atlantide/components/: __init__.py  fetch.py  lock.py  source.py
atlantide/core/: __init__.py  _tree.py  actions.py  check.py  component.py  context.py  errors.py  fields.py  inline.py  lifecycle.py  markers.py  node_id.py  policy.py  provider.py  registry.py  resource.py  stack.py  types.py
atlantide/engine/: __init__.py  hydrate.py  locking.py  model.py  planner.py
atlantide/graph/: __init__.py  build.py  model.py  order.py  schedule.py
atlantide/ir/: __init__.py  artifact.py  canonical.py  hash.py  lower.py  merkle.py  model.py
atlantide/lang/: __init__.py  builtins.py  interp.py  validate.py
atlantide/policy/: __init__.py  base.py  binding.py  builtin.py  registry.py
atlantide/providers/: __init__.py
atlantide/reconcile/: __init__.py  aliases.py  context.py  diff.py  executor.py  planner.py  refresh.py  resolve.py
atlantide/secrets/: __init__.py  _aesgcm.py  backend.py  digest.py  env.py  factory.py  keyfile_store.py  material.py  registry.py  ssm.py
atlantide/state/: __init__.py  backend.py  codec.py  factory.py  memory_backend.py  postgres_backend.py  s3_backend.py  sqlite_backend.py
examples/: atlantide.toml
examples/aws/: README.md  atlantide.toml  example-one.py  example-three.py  example-two.py
examples/components/: README.md
scripts/: atlantide_entry.py
tests/: conftest.py  test_scaffold.py
tests/cli/: __init__.py  test_cli.py  test_component_cli.py  test_introspect.py  test_project.py  test_remote_state.py  test_secrets_redaction.py
tests/components/: __init__.py  conftest.py  test_fetch.py  test_lock.py  test_mount.py
tests/core/: conftest.py  test_component.py  test_fields.py  test_inline.py  test_registry.py  test_resource.py  test_stack.py
tests/engine/: __init__.py  test_engine.py  test_keyfile_mismatch.py  test_stack_reference.py
tests/graph/: __init__.py  conftest.py  test_build.py  test_schedule.py
tests/ir/: __init__.py  test_artifact.py  test_canonical.py  test_lower.py  test_merkle.py
tests/lang/: __init__.py  test_builtins.py  test_interp.py  test_validate.py
tests/policy/: __init__.py  test_policy.py
tests/providers/: __init__.py  test_aws.py  test_local.py  test_multiregion.py  test_provider_retry.py  test_random.py  test_secure_bucket.py
tests/reconcile/: __init__.py  conftest.py  test_aliases.py  test_apply_errors.py  test_diff.py  test_executor.py  test_lifecycle.py  test_refresh.py  test_transforms.py
tests/secrets/: test_output_sealing.py  test_sealing_integration.py  test_secrets.py  test_ssm.py
(+55 files in other folders)
