[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlantide"
version = "0.1.0"
description = "Typed Python IaC engine: deterministic Atlas-lang config, graph state, parallel reconciliation"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13",
    "returns>=0.23",
    "boto3>=1.34",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/atlantide-org/atlantide"
Repository = "https://github.com/atlantide-org/atlantide"

[project.scripts]
atlantide = "atlantide.cli.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6",
    "mypy>=1.10",
    "ruff>=0.5",
    "import-linter>=2",
    "moto>=5",
    "boto3-stubs[s3]>=1.34",
    "pre-commit>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["atlantide"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["atlantide"]
plugins = ["returns.contrib.mypy.returns_plugin"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=atlantide --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["atlantide"]

[tool.importlinter]
root_package = "atlantide"

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
layers = [
    "atlantide.cli",
    "atlantide.engine",
    "atlantide.reconcile",
    "atlantide.policy | atlantide.providers | atlantide.state | atlantide.secrets | atlantide.lang",
    "atlantide.graph",
    "atlantide.ir",
    "atlantide.core",
]

[[tool.importlinter.contracts]]
name = "core is a leaf (imports no sibling package)"
type = "forbidden"
source_modules = ["atlantide.core"]
forbidden_modules = [
    "atlantide.lang",
    "atlantide.ir",
    "atlantide.graph",
    "atlantide.state",
    "atlantide.secrets",
    "atlantide.reconcile",
    "atlantide.providers",
    "atlantide.cli",
    "atlantide.engine",
]

[[tool.importlinter.contracts]]
name = "providers depend only on core"
type = "forbidden"
source_modules = ["atlantide.providers"]
forbidden_modules = [
    "atlantide.lang",
    "atlantide.ir",
    "atlantide.graph",
    "atlantide.state",
    "atlantide.secrets",
    "atlantide.reconcile",
    "atlantide.cli",
    "atlantide.engine",
]

[[tool.importlinter.contracts]]
name = "secrets depends only on core"
type = "forbidden"
source_modules = ["atlantide.secrets"]
forbidden_modules = [
    "atlantide.lang",
    "atlantide.ir",
    "atlantide.graph",
    "atlantide.state",
    "atlantide.reconcile",
    "atlantide.providers",
    "atlantide.cli",
    "atlantide.engine",
]
